[package]
name = "doc-type"
version = "0.1.0"
edition = "2021"
description = "A small Rust crate for generating documents from your types"
license = "GPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3