[package]
name = "doc-type"
version = "0.1.2"
edition = "2021"
description = "A small Rust crate for generating documents from your types"
license = "GPL-2.0"
authors = ["Hoang Tung Truong <mnpq.raven@gmail.com>"]
repository = "https://github.com/mnpqraven/doc-type"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
specta = "1.0.2"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[features]
default = ["ts"]
rust = []
ts = []
